test 1 de la rectification d'un bug overflow

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -13,6 +13,9 @@
     margin: 0;
     box-sizing: border-box;
 }
+.content-area {
+    overflow: hidden;
+}
 
 /* ------------HEADER/NAV---------*/
 header {
